# fastapi-api-analytics

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 121885f3af72_init.py
client_middleware/: middleware.py
fixtures/: logs.csv
server/: auth.py  models.py  routers.py  schemas.py  services.py
tests/: conftest.py  test_auth.py  test_middleware.py  test_models.py  test_models_schemas.py  test_routers.py  test_services.py
