[project]
name = "fastapi-api-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
]

[tool.coverage.run]
data_file = "/tmp/.coverage"